<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/grey_800"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/base_margin"
        android:layout_marginLeft="@dimen/base_margin"
        android:layout_marginRight="@dimen/base_margin"
        android:layout_marginStart="@dimen/base_margin"
        android:layout_marginTop="@dimen/base_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/dummy_by"
            android:textColor="@color/colorSecondaryDark"
            android:textSize="@dimen/min_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_time_ago"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/base_margin"
            android:layout_marginStart="@dimen/base_margin"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/dummy_time_ago"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/min_text_size" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/base_margin"
        android:fontFamily="sans-serif"
        android:text="@string/dummy_comment"
        android:textColor="@color/colorSecondaryLight"
        android:textSize="@dimen/base_text_size" />
</LinearLayout>